hphp/hack/test/typecheck/runtime_generic_bad.php
<?hh

function f<T>(): void {
  T::foo;
}
